RESOLVED FIXED299646
REGRESSION: "Use Apple Vision Pro" button disappears on FX Alien Earth Website in Safari after entering Spatial viewer and exiting
https://bugs.webkit.org/show_bug.cgi?id=299646
Summary REGRESSION: "Use Apple Vision Pro" button disappears on FX Alien Earth Websit...
Vitor Roriz
Reported 2025-09-26 18:53:05 PDT
Attachments
Vitor Roriz
Comment 1 2025-09-26 19:02:19 PDT
EWS
Comment 2 2025-10-01 15:42:05 PDT
Committed 300851@main (33ebcf97f481): <https://commits.webkit.org/300851@main> Reviewed commits have been landed. Closing PR #51424 and removing active labels.
EWS
Comment 3 2025-10-01 20:49:45 PDT
Committed 297297.501@safari-7622-branch (1f498f5e20a1): <https://commits.webkit.org/297297.501@safari-7622-branch> Reviewed commits have been landed. Closing PR #3742 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.