REGRESSION: "Use Apple Vision Pro" button disappears on FX Alien Earth Website in Safari after entering Spatial viewer and exiting https://bugs.webkit.org/show_bug.cgi?id=299646 rdar://158351089

Reviewed by Simon Fraser.

WebFullScreenManager::didExitFullScreen issues a scrollIntoViewIfNotVisible.
This allows for scrolling into an an area that is unscrollable for the user.
We are adding a new option (ShouldAvoidScrollingToUnscrollableArea) to
ScrollRectToVisibleOptions such that ::didExitFullScreen can opt-out for
this behavior.

Tests: imported/w3c/web-platform-tests/fullscreen/rendering/exit-fullscreen-scroll-to-unscrollable-area-overflow-hidden.html
       imported/w3c/web-platform-tests/fullscreen/rendering/exit-fullscreen-scroll-to-unscrollable-area-overflow-x-hidden-ref.html
       imported/w3c/web-platform-tests/fullscreen/rendering/exit-fullscreen-scroll-to-unscrollable-area-overflow-x-hidden.html
       imported/w3c/web-platform-tests/fullscreen/rendering/exit-fullscreen-scroll-to-unscrollable-area-ref.html
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/exit-fullscreen-scroll-to-unscrollable-area-overflow-hidden-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/exit-fullscreen-scroll-to-unscrollable-area-overflow-hidden.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/exit-fullscreen-scroll-to-unscrollable-area-overflow-x-hidden-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/exit-fullscreen-scroll-to-unscrollable-area-overflow-x-hidden-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/exit-fullscreen-scroll-to-unscrollable-area-overflow-x-hidden.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/fullscreen/rendering/exit-fullscreen-scroll-to-unscrollable-area-ref.html: Added.
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::scrollIntoViewIfNotVisible):
* Source/WebCore/dom/Element.h:
* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::scrollToFocusedElementInternal):
(WebCore::adjustScrollRectToVisibleOptionsForHiddenOverflow):
(WebCore::LocalFrameView::scrollRectToVisible):
* Source/WebCore/platform/ScrollAlignment.cpp:
* Source/WebCore/platform/ScrollAlignment.h:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::shouldTryToScrollForScrollIntoView const):
* Source/WebCore/rendering/RenderLayer.h:
* Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.cpp:
(WebKit::WebFullScreenManager::didExitFullScreen):

Canonical link: https://commits.webkit.org/300851@main